#499 closed bug (fixed)
[Globe] Segment violation
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Globe crashes on start
Thread 567 caused an exception: Segment violation Reading symbols from /boot/beos/system/lib/libbe.so...(no debugging symbols found)...done. Loaded symbols for /boot/beos/system/lib/libbe.so Reading symbols from /boot/beos/system/lib/libtextencoding.so...(no debugging symbols found)...done. Loaded symbols for /boot/beos/system/lib/libtextencoding.so Reading symbols from /boot/beos/system/lib/libtracker.so... (no debugging symbols found)...done. Loaded symbols for /boot/beos/system/lib/libtracker.so Reading symbols from /boot/beos/system/lib/libroot.so...done. Loaded symbols for /boot/beos/system/lib/libroot.so Reading symbols from /boot/beos/system/lib/libtranslation.so...done. Loaded symbols for /boot/beos/system/lib/libtranslation.so Reading symbols from /boot/beos/system/lib/libgame.so...done. Loaded symbols for /boot/beos/system/lib/libgame.so Reading symbols from /boot/beos/system/lib/libstdc++.hrev4.so...done. Loaded symbols for /boot/beos/system/lib/libstdc++.hrev4.so Reading symbols from /boot/beos/system/lib/libnet.so...done. Loaded symbols for /boot/beos/system/lib/libnet.so Reading symbols from /boot/beos/system/lib/libmedia.so...done. Loaded symbols for /boot/beos/system/lib/libmedia.so Reading symbols from /boot/beos/system/lib/libsocket.so...done. Loaded symbols for /boot/beos/system/lib/libsocket.so Reading symbols from /system/add-ons/Translators/BMPTranslator...done. Loaded symbols for /system/add-ons/Translators/BMPTranslator Reading symbols from /system/add-ons/Translators/GIFTranslator...done. Loaded symbols for /system/add-ons/Translators/GIFTranslator Reading symbols from /system/add-ons/Translators/JPEG2000Translator...done. Loaded symbols for /system/add-ons/Translators/JPEG2000Translator Reading symbols from /system/add-ons/Translators/JPEGTranslator...done. Loaded symbols for /system/add-ons/Translators/JPEGTranslator Reading symbols from /system/add-ons/Translators/PNGTranslator...done. Loaded symbols for /system/add-ons/Translators/PNGTranslator Reading symbols from /boot/beos/system/lib/libz.so...done. Loaded symbols for /boot/beos/system/lib/libz.so Reading symbols from /system/add-ons/Translators/RTF-Translator...done. Loaded symbols for /system/add-ons/Translators/RTF-Translator Reading symbols from /system/add-ons/Translators/STXTTranslator...done. Loaded symbols for /system/add-ons/Translators/STXTTranslator
[Switching to team /boot/apps/Globe/globe (567) thread globe (567)] 0x003b3b5a in BWindow::IsHidden () from /boot/beos/system/lib/libbe.so (gdb) bt #0 0x003b3b5a in BWindow::IsHidden () from /boot/beos/system/lib/libbe.so #1 0x003b271c in BWindow::Activate () from /boot/beos/system/lib/libbe.so #2 0x0025005f in RHTMLtextview::RHTMLtextview () #3 0x0024f8f9 in RHTMLtext::RHTMLtext () #4 0x0022bcd6 in RHTMLWin::AddText () #5 0x0022a26d in RHTMLWin::RHTMLWin () #6 0x002263df in RHTMLApp::RHTMLApp () #7 0x0022687a in main () (gdb)
Change History (10)
comment:1 by , 19 years ago
comment:2 by , 19 years ago
Cc: | added |
---|
comment:3 by , 19 years ago
The stack crawl doesn't really tell you that it uses Window(). Maybe it calls Activate() on a BWindow pointer that is passed to the constructor.
comment:4 by , 19 years ago
Status: | new → closed |
---|
comment:6 by , 19 years ago
Resolution: | → fixed |
---|
comment:8 by , 19 years ago
comment:9 by , 19 years ago
I'll reopen this bug as it still crashes same way with very much same back trace for me.
comment:10 by , 19 years ago
I tested again and it definitely works now on real hardware. Could you give the stacktrace you have now ?
I feel the same than on #544: Calling Window() method in a View constructor when the view is obviously not attached to a window, returns NULL, as stated by the bebook. Axel, what's your feeling ?