Now checks all calls to Lock() - this should fix buggy apps like Globe in bug #499.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17227 a95241bf-73f2-0310-859d-f6bbb57e9c96